--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>MailBox</title>
   <base href="/">
-  <link rel="stylesheet" href="/assets/css/bootstrap.css">
-  <link rel="stylesheet" href="/assets/css/bootstrap-theme.css">
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root>Loading...</app-root>
-</body>
+  <link rel="stylesheet" href="public/css/bootstrap.css">
+    <link rel="stylesheet" href="public/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="public/css/main.css">
+  </head>
+  <body>
+   <app-root>L</app-root>
+  </body>
 </html>
