--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <title>MailBox</title>
   <base href="https://krepish.github.io/mail-box/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="public/css/bootstrap.css">
-    <link rel="stylesheet" href="public/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="public/css/main.css">
+<!--   <link rel="stylesheet" href="public/css/bootstrap.css"> -->
+<!--     <link rel="stylesheet" href="public/css/bootstrap-theme.css"> -->
+<!--     <link rel="stylesheet" href="public/css/main.css"> -->
   <link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
   <body>
    <app-root>L</app-root>
