--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="public/css/bootstrap.css">
+  <!--<link rel="stylesheet" href="public/css/bootstrap.css">
     <link rel="stylesheet" href="public/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="public/css/main.css">-->
   </head>
   <body>
    <app-root>L</app-root>
